:bug: bug on footer - not responsive for small screen

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ body {
     left: 20%;
 }
 
+.carousel {
+    margin-bottom: 100px;
+}
+
 .wrapper-projects {
     display: flex;
     flex-wrap: wrap;
@@ -88,6 +92,7 @@ body {
     padding: 10px;
     border-radius: 10px;
     background-color: #fff;
+    margin-bottom: 100px;
 }
 
 .contact-map {
@@ -155,7 +160,11 @@ body {
     padding: 10px 0;
     cursor: pointer;
     font-size: 18px;
+}
 
+.contact-form-btn:hover {
+    transform: scale(1.03); 
+    background-color: #c42d5b;
 }
 
 footer {
@@ -208,7 +217,7 @@ footer {
 
 .menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
@@ -229,4 +238,17 @@ footer {
 .menu li a:hover {
     color: #e6356a;
     
+}
+
+@media (max-width: 425px){
+    .menu li a {
+        font-size: 11px;
+        margin-right: 2px;
+    }
+}
+
+@media (max-width: 375px){
+    .menu li a {
+        font-size: 8px;
+    }
 }
